Fix vertical screen height on safari mobile.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,9 +18,9 @@ body {
 @import "custom-date-range";
 @import "reddit-comment";
 
-// Fix for tailwind h-screen on safari
+// Fix for tailwind h-screen on safari - https://benborgers.com/posts/tailwind-h-screen
 @supports (-webkit-touch-callout: none) {
     .h-screen {
-        height: -webkit-fill-available;
+        height: -webkit-fill-available !important;
     }
 }
